// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package controller.api.services.v1;

import "controller/api/resources/authtokens/v1/authtoken.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/hashicorp/boundary/internal/gen/controller/api/services;services";

service AuthTokenService {
  // GetAuthToken returns a stored Auth Token if present.  The provided request
  // must include the Auth Token id and if it is missing, malformed or
  // referencing a non existing resource an error is returned.
  rpc GetAuthToken(GetAuthTokenRequest) returns (GetAuthTokenResponse) {
    option (google.api.http) = {
      get: "/v1/auth-tokens/{id}"
      response_body: "item"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Gets a single Auth Token."};
  }

  // ListAuthTokens returns a list of stored Auth Tokens which exist inside
  // the provided scope.  The request must include the scope ids for
  // the Auth Tokens being listed.  If the scope id is missing, malformed, or
  // referencing a non existing resource, an error is returned.
  rpc ListAuthTokens(ListAuthTokensRequest) returns (ListAuthTokensResponse) {
    option (google.api.http) = {get: "/v1/auth-tokens"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Lists all Auth Tokens."};
  }

  // DeleteAuthToken removes a Auth Token from Boundary. If the provided
  // Auth Token id is malformed or not provided an error is returned.
  rpc DeleteAuthToken(DeleteAuthTokenRequest) returns (DeleteAuthTokenResponse) {
    option (google.api.http) = {delete: "/v1/auth-tokens/{id}"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Deletes an Auth Token."};
  }
}

message GetAuthTokenRequest {
  string id = 1; // @gotags: `class:"public"`
}

message GetAuthTokenResponse {
  resources.authtokens.v1.AuthToken item = 1;
}

message ListAuthTokensRequest {
  string scope_id = 1 [json_name = "scope_id"]; // @gotags: `class:"public"`
  bool recursive = 20 [json_name = "recursive"]; // @gotags: `class:"public"`
  string filter = 30 [json_name = "filter"]; // @gotags: `class:"public"`
  // An opaque token used to continue an existing iteration or
  // request updated items. If not specified, pagination
  // will start from the beginning.
  string list_token = 40 [json_name = "list_token"]; // @gotags: `class:"public"`
  // The maximum size of a page in this iteration.
  // If unset, the default page size configured will be used.
  // If the page_size is greater than the default page configured,
  // an error will be returned.
  uint32 page_size = 50 [json_name = "page_size"]; // @gotags: `class:"public"`
}

message ListAuthTokensResponse {
  repeated resources.authtokens.v1.AuthToken items = 1;
  // The type of response, either "delta" or "complete".
  // Delta signifies that this is part of a paginated result
  // or an update to a previously completed pagination.
  // Complete signifies that it is the last page.
  string response_type = 2 [json_name = "response_type"]; // @gotags: `class:"public"`
  // An opaque token used to continue an existing pagination or
  // request updated items. Use this token in the next list request
  // to request the next page.
  string list_token = 3 [json_name = "list_token"]; // @gotags: `class:"public"`
  // The name of the field which the items are sorted by.
  string sort_by = 4 [json_name = "sort_by"]; // @gotags: `class:"public"`
  // The direction of the sort, either "asc" or "desc".
  string sort_dir = 5 [json_name = "sort_dir"]; // @gotags: `class:"public"`
  // A list of item IDs that have been removed since they were returned
  // as part of a pagination. They should be dropped from any client cache.
  // This may contain items that are not known to the cache, if they were
  // created and deleted between listings.
  repeated string removed_ids = 6 [json_name = "removed_ids"]; // @gotags: `class:"public"`
  // An estimate at the total items available. This may change during pagination.
  uint32 est_item_count = 7 [json_name = "est_item_count"]; // @gotags: `class:"public"`
}

message DeleteAuthTokenRequest {
  string id = 1; // @gotags: `class:"public"`
}

message DeleteAuthTokenResponse {}
